add ability to clear the grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Etch-A-Sketch</h1>
     <button id="gridSize">Resize</button>
+    <button id="clearGrid">Clear</button>
     <div id="container"></div>
 </body>
 </html>
