repositioning the buttons

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <button id="gridSize">Resize</button>
-    <button id="clearGrid">Clear</button>
-    <div id="container"></div>
+    <div id="wrapper">
+        <div id="buttons">
+            <button id="gridSize">Resize</button>
+            <button id="clearGrid">Clear</button>
+        </div>
+        <div id="container"></div>
+    </div>
 </body>
 </html>
